--- a/.github/workflows/linkedin.yml
+++ b/.github/workflows/linkedin.yml
@@ -33,6 +33,7 @@ jobs:
       
       - name: Sanity check
         run: |
+          echo "TOPICS_CSV=$TOPICS_CSV"
           ls -la
           test -f "$TOPICS_CSV" || (echo "❌ Missing $TOPICS_CSV"; exit 1)
           head -n 2 "$TOPICS_CSV"
